# syscraws

./: .gitignore  Cargo.toml  Doxyfile  Makefile  ast.cpp  ast.hpp  build.rs  error.cpp  error.hpp  ir.cpp  ir.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  pos.cpp  pos.hpp  pre_ast.cpp  pre_ast.hpp  test.sysc  token.cpp  token.hpp  type.cpp  type.hpp
src/: ast.rs  ast_with_symbol.rs  backend.rs  ffi.cpp  ffi.hpp  ffi.rs  frontend.rs  ir.rs  lines.rs  log.rs  main.rs  parser.rs  pre_ast.rs  range.rs  token.rs  ty.rs
src/ast/: debug_print.rs  mod.rs  translate.rs  ty.rs  type_check.rs
src/ast/ty/: log.rs  (+1 more)
src/backend/: ir.rs  tests.rs  ty.rs
src/frontend/: ast.rs  block_builder.rs  chars_peekable.rs  context.rs  parser.rs  tests.rs  translate.rs  variables.rs
src/ir/: debug.rs
src/lexer/: chars_peekable.rs  error.rs  mod.rs  test.rs
src/parser/: chars_peekable.rs  error.rs  lexer.rs  mod.rs  tests.rs  token.rs  token_seq.rs
src/pre_ast/: debug_print.rs  error.rs  into_ast.rs  map.rs  mod.rs  translate.rs
src/token/: debug_print.rs  mod.rs
src/ty/: debug_print.rs
tests/parse-errors/: all.sysc  invalid_block_comment.sysc  invalid_escape_sequence.sysc  unclosed_block.sysc  unclosed_bracket.sysc  unclosed_parenthesis.sysc  unexpected_token_after_dot.sysc  unexpected_token_after_keyword_func.sysc  unexpected_token_after_keyword_struct.sysc  unexpected_token_in_block.sysc  unexpected_token_in_brackets.sysc  unexpected_token_in_parentheses.sysc  unexpected_token_in_string_literal.sysc  unterminated_comment.sysc  unterminated_string_literal.sysc
(+32 files in other folders)
