[package]
name = "syscraws"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] }
enum-iterator = "2.1.0"
unicode-ident = "1.0.14"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140" }
assert-json-diff = "2.0.2"
